# tmux-styler

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  default.py  main.tmux  pyproject.toml
.github/workflows/: gen_docs.yml
src/tmux_styler/: Colors.py  ContextVars.py  Style.py  Styler.py  __init__.py
src/tmux_styler/Statusbar/: Segment.py  Statusbar.py  WindowList.py
src/tmux_styler/Statusbar/Segments/: DateTime.py  TmuxInfo.py  __init__.py
src/tmux_styler/_CLI/: main.py  process_name.py  process_segments.py  utils.py
