[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tmux_styler"
version = "1.0.1"
authors = [{ name = "daneski13", email = "daneski13@gmail.com" }]
description = "Local package and CLI for tmux-styler"
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["inquirer", "psutil", "toml"]

[project.scripts]
tmux-styler = "tmux_styler._CLI.main:main"

[project.urls]
"Homepage" = "https://github.com/daneski13/tmux-styler"
"Bug Tracker" = "https://github.com/daneski13/tmux-styler/issues"
